--- a/src/styles/main.module.css
+++ b/src/styles/main.module.css
@@ -9,3 +9,11 @@
   box-shadow: 0px 25px 40px -20px rgba(0, 0, 0, 0.1);
   padding: 1.6rem;
 }
+
+@media screen and (max-width: 587px) {
+  .mainGrid {
+    flex-direction: column;
+    padding: 0;
+    margin-block: 0;
+  }
+}
