--- a/src/styles/sideBar.module.css
+++ b/src/styles/sideBar.module.css
@@ -47,3 +47,32 @@
   color: var(--blue-300);
   font-size: var(--fs-12);
 }
+@media screen and (max-width: 690px) {
+  .nav {
+    flex-basis: 40%;
+  }
+}
+@media screen and (max-width: 587px) {
+  .nav {
+    background: url('../assets/images/bg-sidebar-mobile.svg');
+    min-height: 200px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    border-radius: 0;
+    min-width: 375px;
+  }
+  .navList {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+    margin-bottom: 4rem;
+  }
+  .navList > * + * {
+    margin: 0;
+  }
+  .navStepDetails {
+    display: none;
+  }
+}
