--- a/src/styles/sideBar.module.css
+++ b/src/styles/sideBar.module.css
@@ -1,4 +1,4 @@
-.nav {
+.navWrapper {
   background: url('../assets/images/bg-sidebar-desktop.svg');
   background-position: center;
   background-repeat: no-repeat;
@@ -48,12 +48,12 @@
   font-size: var(--fs-12);
 }
 @media screen and (max-width: 690px) {
-  .nav {
+  .navWrapper {
     flex-basis: 40%;
   }
 }
 @media screen and (max-width: 587px) {
-  .nav {
+  .navWrapper {
     background: url('../assets/images/bg-sidebar-mobile.svg');
     min-height: 200px;
     background-repeat: no-repeat;
