--- a/src/styles/grid.module.css
+++ b/src/styles/grid.module.css
@@ -2,8 +2,9 @@
   max-width: 940px;
   margin-inline: auto;
   display: flex;
-  column-gap: 1rem;
-  margin-block: 8rem;
+  display: grid;
+  grid-template-columns: 30% 70%;
+  grid-template-rows: repeat(2, 1fr);
   min-height: 80vh;
   background-color: var(--white);
   box-shadow: 0px 25px 40px -20px rgba(0, 0, 0, 0.1);
@@ -12,7 +13,8 @@
 
 @media screen and (max-width: 587px) {
   .mainGrid {
-    flex-direction: column;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(3, 1fr);
     padding: 0;
     margin-block: 0;
     background: transparent;
