--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap');
-* {
+*,
+*::after {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
