--- a/src/styles/sideBar.module.css
+++ b/src/styles/sideBar.module.css
@@ -49,7 +49,7 @@
   color: var(--blue-300);
   font-size: var(--fs-12);
 }
-@media screen and (max-width: 690px) {
+@media screen (min-width: 587px) and (max-width: 690px) {
   .navWrapper {
     flex-basis: 40%;
   }
