--- a/src/styles/grid.module.css
+++ b/src/styles/grid.module.css
@@ -4,10 +4,10 @@
   display: grid;
   grid-template-columns: 30% 70%;
   grid-template-rows: repeat(2, 1fr);
-  max-height: 90vh;
+  max-height: 95vh;
   background-color: var(--white);
   box-shadow: 0px 25px 40px -20px rgba(0, 0, 0, 0.1);
-  padding: 1.6rem;
+  padding: 2rem 1.5rem;
   margin-block: 4rem;
 }
 
