--- a/src/styles/grid.module.css
+++ b/src/styles/grid.module.css
@@ -3,7 +3,7 @@
   margin-inline: auto;
   display: grid;
   grid-template-columns: 30% 70%;
-  grid-template-rows: repeat(2, 1fr);
+  grid-template-rows: repeat(2, min-content);
   max-height: 95vh;
   background-color: var(--white);
   box-shadow: 0px 25px 40px -20px rgba(0, 0, 0, 0.1);
