--- a/src/styles/grid.module.css
+++ b/src/styles/grid.module.css
@@ -2,14 +2,13 @@
   max-width: 940px;
   margin-inline: auto;
   display: grid;
-  grid-template-columns: 30% minmax(min-content, 450px);
+  grid-template-columns: 30% 70%;
   grid-template-rows: repeat(2, min-content);
   max-height: 95vh;
   background-color: var(--white);
   box-shadow: 0px 25px 40px -20px rgba(0, 0, 0, 0.1);
   padding: 2rem 1.5rem;
   margin-block: 4rem;
-  place-content: center;
 }
 
 @media screen and (max-width: 587px) {
