creating and styling step 5 component

--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,9 @@
 
   --blue-200: #bee2fd;
   --blue-300: #abbcff;
+  --blue-400: #928cff;
   --blue-500: #483eff;
+  --blue-600: #164a8a;
   --blue-900: #022959;
   --error: #ee374a;
 
