--- a/src/styles/grid.module.css
+++ b/src/styles/grid.module.css
@@ -9,6 +9,7 @@
   box-shadow: 0px 25px 40px -20px rgba(0, 0, 0, 0.1);
   padding: 2rem 1.5rem;
   margin-block: 4rem;
+  min-height: 600px;
 }
 
 @media screen and (max-width: 587px) {
